--- a/productList.html
+++ b/productList.html
@@ -61,30 +61,31 @@
                             <div class="form-group">
                                 <select name="minPrice" class="form-select" id="minPrice">
                                     <option value="0">0</option>
-                                    <option value="1000">1000</option>
-                                    <option value="2000">2000</option>
-                                    <option value="5000">5000</option>
-                                    <option value="10000">10000</option>
-                                    <option value="20000">20000</option>
+                                    <option value="10">10</option>
+                                    <option value="20">20</option>
+                                    <option value="50">50</option>
+                                    <option value="100">100</option>
+                                    <option value="200">200</option>
                                 </select>
                             </div>
                             <div class="form-group">
                               <select name="maxPrice" class="form-select" id="maxPrice">
                                   <option value="0">0</option>
+                                  <option value="10">10</option>
+                                  <option value="20">20</option>
+                                  <option value="50">50</option>
+                                  <option value="100">100</option>
+                                  <option value="200">200</option>
                                   <option value="1000">1000</option>
-                                  <option value="2000">2000</option>
-                                  <option value="5000">5000</option>
-                                  <option value="10000">10000</option>
-                                  <option value="20000">20000</option>
-                                  <option value="100000">100000</option>
                               </select>
                           </div>
                         </div>
                         <div class="price-filter-title d-flex flex-row justify-content-start">
-                            <div id="price-filter-label-min">Max Price</div>
-                            <div id="price-filter-label-max">Min Price</div>
+                            <div id="price-filter-label-min">Min Price</div>
+                            <div id="price-filter-label-max">Max Price</div>
                         </div>
                     </div>
+                    <button class="btn btn-warning clear-filter" id="search">Search</button>
                     <button class="btn btn-danger clear-filter" id="clear">Clear Filter</button>
                   </div>
                   <div class="product-list-box" id="productList">
