--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <!-- TODO: Add category child -->
 
               <div class="category-item d-flex align-items-center justify-content-center">
-                <a href="">All products</a>
+                <a href="./productList.html">All products</a>
               </div>  
                           
           </div>
