--- a/productList.html
+++ b/productList.html
@@ -47,11 +47,7 @@
 
                     <div class="sidebar-title fw-bold">Categories</div>
                     <div id="categoryList">
-                        <a href="#" class="d-flex text-decoration-none">Electronics</a>
-                        <a href="#" class="d-flex text-decoration-none">Kitchen Ware</a>
-                        <a href="#" class="d-flex text-decoration-none">Women Outfit</a>
-                        <a href="#" class="d-flex text-decoration-none">Sports</a>
-                        <a href="#" class="d-flex text-decoration-none">Gaming</a>
+                        <!-- category list is populated by js -->
                     </div>
 
 
