added loader that comes till the time we download content

--- a/productList.html
+++ b/productList.html
@@ -10,7 +10,17 @@
     <link rel="stylesheet" href="CSS/productList.css" />
 </head>
 <body>
-    <div id="productListPage">
+
+    
+  <div class="loader-backdrop" id="loader-backdrop">
+      <div class="loader2">
+          <div>
+      
+          </div>
+      </div>
+  </div>
+
+  <div id="productListPage">
 
         <!-- navbar -->
 
@@ -103,7 +113,7 @@
             </div>
           </div>
 
-    </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-
