--- a/productDetails.html
+++ b/productDetails.html
@@ -10,7 +10,15 @@
 </head>
 <body>
 
-    <div id="productDetailsPage">
+  <div class="loader-backdrop" id="loader-backdrop">
+      <div class="loader2">
+          <div>
+        
+          </div>
+      </div>
+  </div>
+
+  <div id="productDetailsPage">
         <nav id="header">
             <div class="container">
               <div class="row">
@@ -63,7 +71,7 @@
                 </div>
             </div>
           </div>
-    </div>
+  </div>
 
 
     
