--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <body>
 
     <div class="loader-backdrop" id="loader-backdrop">
-      <div class="loader2">
-        <div>
+        <div class="loader2">
+            <div>
             
+            </div>
         </div>
     </div>
-    </div>
+
     <div class="homePage">
       <!-- header -->
       <nav id="header">
@@ -61,6 +62,7 @@
     I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-
 BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="js/common.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
